Edited the fonts

--- a/main.html
+++ b/main.html
@@ -12,9 +12,8 @@
         <img src="images/puplogo.png" alt="logo" class="logo">
         <h2>POLYTECHNIC UNIVERSITY OF THE PHILIPPINES</h2>
     </header>
-
+    <h1>PUP Navigator</h1>
     <section>
-        <h1>PUP Navigator</h1>
         <img id="pupmap" src="images/map.png" alt="PUP Map" usemap="#map">
         <map name="map">
         <!--1 PUP Amphitheater-->
@@ -372,7 +371,7 @@
         148,262" 
         href="#" 
         alt="Student Canteen" 
-        data-img="images/pupsampaguitacanteenbuilding.jpg"
+        data-img="images/noimg.png"
         data-description="There's a small canteen situated adjacent to the main PUP School Canteen in the Sampaguita Building.">
 
         <!--30 Linear Park-->
