Fixed the error in maps

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <h1>PUP Navigator</h1>
     <section>
-        <img id="pupmap" src="images/map.png" alt="PUP Map" usemap="#map">
+        <img id="pupmap" src="images/Map.png" alt="PUP Map" usemap="#map">
         <map name="map">
         <!--1 PUP Amphitheater-->
         <area id="area1" shape="poly" 
